实现数据的加载动画

--- a/MyToDo/Views/MainView.xaml
+++ b/MyToDo/Views/MainView.xaml
@@ -24,8 +24,9 @@
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
+    <!--好像是要有这一层才能有弹窗-->
     <materialDesign:DialogHost
-        DialogTheme="Inherit"
+        DialogTheme="Inherit" x:Name="DialogHost"
         Identifier="RootDialog"
         SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
 
