--- a/MyToDo/Views/ToDoView.xaml
+++ b/MyToDo/Views/ToDoView.xaml
@@ -3,9 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:MyToDo.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:viewmodels="clr-namespace:MyToDo.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:ToDoViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -27,7 +30,7 @@
                         DockPanel.Dock="Top"
                         Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Text="状态：" />
-                        <ComboBox>
+                        <ComboBox SelectedIndex="{Binding CurrentDto.Status}">
                             <ComboBoxItem>待办</ComboBoxItem>
                             <ComboBoxItem>已完成</ComboBoxItem>
                         </ComboBox>
@@ -36,15 +39,19 @@
                     <TextBox
                         Margin="20,0"
                         md:HintAssist.Hint="请输入待办概要"
-                        DockPanel.Dock="Top" />
+                        DockPanel.Dock="Top"
+                        Text="{Binding CurrentDto.Title}" />
                     <TextBox
                         MinHeight="100"
                         Margin="20"
                         md:HintAssist.Hint="请输入待办内容"
-                        DockPanel.Dock="Top" />
+                        DockPanel.Dock="Top"
+                        Text="{Binding CurrentDto.Content}" />
 
                     <Button
                         Margin="20,0"
+                        Command="{Binding ExecuteCommand}"
+                        CommandParameter="保存"
                         Content="添加到待办"
                         DockPanel.Dock="Top" />
 
@@ -63,7 +70,16 @@
                         Width="250"
                         VerticalAlignment="Center"
                         md:HintAssist.Hint="查找待办事项..."
-                        md:TextFieldAssist.HasClearButton="True" />
+                        md:TextFieldAssist.HasClearButton="True"
+                        Text="{Binding Search, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <!--  摁下enter就搜索  -->
+                        <TextBox.InputBindings>
+                            <KeyBinding
+                                Key="Enter"
+                                Command="{Binding ExecuteCommand}"
+                                CommandParameter="查询" />
+                        </TextBox.InputBindings>
+                    </TextBox>
                     <TextBlock
                         Margin="10,0"
                         VerticalAlignment="Center"
@@ -78,7 +94,8 @@
                 <Button
                     Margin="10,5"
                     HorizontalAlignment="Right"
-                    Command="{Binding AddCommand}"
+                    Command="{Binding ExecuteCommand}"
+                    CommandParameter="新增"
                     Content="+ 添加待办" />
 
                 <ScrollViewer Grid.Row="1">
@@ -98,6 +115,11 @@
                                         MinHeight="180"
                                         MaxHeight="250"
                                         Margin="8">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="MouseLeftButtonUp">
+                                                <i:InvokeCommandAction Command="{Binding DataContext.SelectedCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}" CommandParameter="{Binding}" />
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="auto" />
                                             <RowDefinition />
