--- a/MyToDo/Views/ToDoView.xaml
+++ b/MyToDo/Views/ToDoView.xaml
@@ -2,6 +2,7 @@
     x:Class="MyToDo.Views.ToDoView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cv="clr-namespace:MyToDo.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:MyToDo.Views"
@@ -12,6 +13,9 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <cv:InToVisibilityConverter x:Key="InToVisibility" />
+    </UserControl.Resources>
 
     <md:DialogHost>
         <md:DrawerHost IsRightDrawerOpen="{Binding IsRightDrawerOpen}">
@@ -84,7 +88,7 @@
                         Margin="10,0"
                         VerticalAlignment="Center"
                         Text="筛选：" />
-                    <ComboBox SelectedIndex="0">
+                    <ComboBox SelectedIndex="{Binding SeleteIndex}">
                         <ComboBoxItem>全部</ComboBoxItem>
                         <ComboBoxItem>代办</ComboBoxItem>
                         <ComboBoxItem>已完成</ComboBoxItem>
@@ -97,6 +101,22 @@
                     Command="{Binding ExecuteCommand}"
                     CommandParameter="新增"
                     Content="+ 添加待办" />
+                
+                <!--这个是没有数据的时候显示的动画-->
+                <StackPanel
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Visibility="{Binding ToDoDtos.Count, Converter={StaticResource InToVisibility}}">
+                    <Image
+                        Width="120"
+                        Height="120"
+                        Source="/Images/wind.png" />
+                    <TextBlock
+                        Margin="0,10"
+                        HorizontalAlignment="Center"
+                        FontSize="18"
+                        Text="尝试添加一些待办事项，以便在此查看他们。" />
+                </StackPanel>
 
                 <ScrollViewer Grid.Row="1">
                     <ItemsControl HorizontalAlignment="Center" ItemsSource="{Binding ToDoDtos}">
@@ -127,13 +147,28 @@
 
                                         <!--  这个是第三步库的PopupBox（卡片右上角的删除按钮）  -->
                                         <md:PopupBox HorizontalAlignment="Right" Panel.ZIndex="1">
-                                            <Button Content="删除" />
+                                            <Button
+                                                Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}"
+                                                Content="删除" />
                                         </md:PopupBox>
 
-                                        <Border
-                                            Grid.RowSpan="2"
-                                            Background="Green"
-                                            CornerRadius="3" />
+                                        <Border Grid.RowSpan="2" CornerRadius="3">
+                                            <Border.Style>
+                                                <!--  触发器让待办和已完成按照颜色分开  -->
+                                                <Style TargetType="Border">
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Status}" Value="0">
+                                                            <Setter Property="Background" Value="#1E90FF" />
+                                                        </DataTrigger>
+
+                                                        <DataTrigger Binding="{Binding Status}" Value="1">
+                                                            <Setter Property="Background" Value="#3CB371" />
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </Border.Style>
+                                        </Border>
 
                                         <TextBlock
                                             Padding="10,5"
