--- a/MyToDo/Views/MemoView.xaml
+++ b/MyToDo/Views/MemoView.xaml
@@ -2,13 +2,21 @@
     x:Class="MyToDo.Views.MemoView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cv="clr-namespace:MyToDo.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:MyToDo.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:viewmodels="clr-namespace:MyToDo.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:MemoViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <cv:InToVisibilityConverter x:Key="InToVisibility" />
+    </UserControl.Resources>
+
     <md:DialogHost>
         <md:DrawerHost IsRightDrawerOpen="{Binding IsRightDrawerOpen}">
             <!--<md:DrawerHost IsLeftDrawerOpen="True">-->
@@ -25,15 +33,19 @@
                     <TextBox
                         Margin="20,0"
                         md:HintAssist.Hint="请输入备忘录概要"
-                        DockPanel.Dock="Top" />
+                        DockPanel.Dock="Top"
+                        Text="{Binding CurrentDto.Title}" />
                     <TextBox
                         MinHeight="100"
                         Margin="20"
                         md:HintAssist.Hint="请输入备忘录内容"
-                        DockPanel.Dock="Top" />
+                        DockPanel.Dock="Top"
+                        Text="{Binding CurrentDto.Content}" />
 
                     <Button
                         Margin="20,0"
+                        Command="{Binding ExecuteCommand}"
+                        CommandParameter="保存"
                         Content="添加到备忘录"
                         DockPanel.Dock="Top" />
 
@@ -48,19 +60,47 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Margin="15,0,0,0" Orientation="Horizontal">
-                    <TextBox
+                    <TextBox 
                         Width="250"
                         VerticalAlignment="Center"
                         md:HintAssist.Hint="查找备忘录..."
-                        md:TextFieldAssist.HasClearButton="True" />
+                        md:TextFieldAssist.HasClearButton="True"
+                        Text="{Binding Search, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                        <!--  摁下enter就搜索  -->
+                        <TextBox.InputBindings>
+                            <KeyBinding
+                                Key="Enter"
+                                Command="{Binding ExecuteCommand}"
+                                CommandParameter="查询" />
+                        </TextBox.InputBindings>
+                    </TextBox>
 
                 </StackPanel>
 
                 <Button
                     Margin="10,5"
                     HorizontalAlignment="Right"
-                    Command="{Binding AddCommand}"
+                    Command="{Binding ExecuteCommand}"
+                    CommandParameter="新增"
                     Content="+ 添加备忘录" />
+
+
+                <!--  这个是没有数据的时候显示的动画  -->
+                <StackPanel
+                    Grid.Row="1"
+                    VerticalAlignment="Center"
+                    Visibility="{Binding MemoDtos.Count, Converter={StaticResource InToVisibility}}">
+                    <Image
+                        Width="120"
+                        Height="120"
+                        Source="/Images/wind.png" />
+                    <TextBlock
+                        Margin="0,10"
+                        HorizontalAlignment="Center"
+                        FontSize="18"
+                        Text="尝试添加一些备忘录，以便在此查看他们。" />
+                </StackPanel>
+
 
                 <ScrollViewer Grid.Row="1">
                     <ItemsControl HorizontalAlignment="Center" ItemsSource="{Binding MemoDtos}">
@@ -72,13 +112,18 @@
 
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <!--  页面加载动画  -->
+                                <!--  添加页面打开动画，淡淡地飘出来  -->
                                 <md:TransitioningContent OpeningEffect="{md:TransitionEffect Kind=ExpandIn}">
                                     <Grid
                                         Width="220"
                                         MinHeight="180"
                                         MaxHeight="250"
                                         Margin="8">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="MouseLeftButtonUp">
+                                                <i:InvokeCommandAction Command="{Binding DataContext.SelectedCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}" CommandParameter="{Binding}" />
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="auto" />
                                             <RowDefinition />
@@ -86,12 +131,15 @@
 
                                         <!--  这个是第三步库的PopupBox（卡片右上角的删除按钮）  -->
                                         <md:PopupBox HorizontalAlignment="Right" Panel.ZIndex="1">
-                                            <Button Content="删除" />
+                                            <Button
+                                                Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}"
+                                                Content="删除" />
                                         </md:PopupBox>
 
                                         <Border
                                             Grid.RowSpan="2"
-                                            Background="Green"
+                                            Background="#1E90FF"
                                             CornerRadius="3" />
 
                                         <TextBlock
@@ -123,7 +171,6 @@
                                         </Canvas>
                                     </Grid>
                                 </md:TransitioningContent>
-
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
