--- a/MyToDo/Views/Dialogs/AddToDoView.xaml
+++ b/MyToDo/Views/Dialogs/AddToDoView.xaml
@@ -47,9 +47,17 @@
                 TextWrapping="Wrap" />
         </DockPanel>
 
-        <StackPanel Margin="10" Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right">
-            <Button Content="取消" Margin="0 0 10 0" Style="{StaticResource MaterialDesignOutlinedButton}"/>
-            <Button Content="确定"/>
+        <StackPanel
+            Grid.Row="2"
+            Margin="10"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Margin="0,0,10,0"
+                Command="{Binding CancelCommand}"
+                Content="取消"
+                Style="{StaticResource MaterialDesignOutlinedButton}" />
+            <Button Command="{Binding SaveCommand}" Content="确定" />
         </StackPanel>
     </Grid>
 </UserControl>
