首页实现添加功能

--- a/MyToDo/Views/Dialogs/AddMemoView.xaml
+++ b/MyToDo/Views/Dialogs/AddMemoView.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:dialogs="clr-namespace:MyToDo.ViewModels.Dialogs" d:DataContext="{d:DesignInstance Type=dialogs:AddMemoViewModel}"
     Width="450"
     Height="300"
     mc:Ignorable="d">
@@ -26,10 +26,12 @@
 
             <TextBox
                 Margin="20,0"
+                Text="{Binding Model.Title}"
                 md:HintAssist.Hint="请输入备忘录概要"
                 DockPanel.Dock="Top" />
 
             <TextBox
+                Text="{Binding Model.Content}"
                 MinHeight="100"
                 Margin="20,0"
                 md:HintAssist.Hint="请输入备忘录内容"
