--- a/MyToDo/Views/Dialogs/AddToDoView.xaml
+++ b/MyToDo/Views/Dialogs/AddToDoView.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:dialogs="clr-namespace:MyToDo.ViewModels.Dialogs" d:DataContext="{d:DesignInstance Type=dialogs:AddToDoViewModel}"
     Width="450"
     Height="300"
     mc:Ignorable="d">
@@ -26,19 +26,21 @@
                 Margin="20,10"
                 DockPanel.Dock="Top"
                 Orientation="Horizontal">
-                <TextBlock Text="状态：" />
-                <ComboBox>
+                <TextBlock Text="状态：" VerticalAlignment="Center"/>
+                <ComboBox SelectedIndex="{Binding Model.Status}" Margin="10 0 0 0">
                     <ComboBoxItem>待办</ComboBoxItem>
                     <ComboBoxItem>已完成</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
 
             <TextBox
+                Text="{Binding Model.Title}"
                 Margin="20,0"
                 md:HintAssist.Hint="请输入待办概要"
                 DockPanel.Dock="Top" />
 
             <TextBox
+                Text="{Binding Model.Content}"
                 MinHeight="100"
                 Margin="20,0"
                 md:HintAssist.Hint="请输入待办内容"
