--- a/MyToDo/Views/IndexView.xaml
+++ b/MyToDo/Views/IndexView.xaml
@@ -2,13 +2,21 @@
     x:Class="MyToDo.Views.IndexView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cv="clr-namespace:MyToDo.Common.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:MyToDo.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:MyToDo.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:IndexViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <cv:InToBoolConverter x:Key="intToBool" />
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -125,13 +133,29 @@
                 </DockPanel>
 
                 <ListBox
+                    x:Name="todoList"
                     HorizontalContentAlignment="Stretch"
                     ItemsSource="{Binding ToDoDtos}"
                     ScrollViewer.VerticalScrollBarVisibility="Hidden">
+
+                    <!--  双击命令  -->
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDoubleClick">
+                            <i:InvokeCommandAction Command="{Binding EditToDoCommand}" CommandParameter="{Binding ElementName=todoList, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+
+
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <DockPanel MaxHeight="80" LastChildFill="False">
-                                <ToggleButton DockPanel.Dock="Right" />
+                                <!--这个要向上找到ItemsControl-->
+                                <ToggleButton
+                                    Command="{Binding DataContext.ToDoCompeletedCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                    CommandParameter="{Binding}"
+                                    DockPanel.Dock="Right"
+                                    IsChecked="{Binding Status, Converter={StaticResource intToBool}}"
+                                    />
                                 <StackPanel>
                                     <TextBlock
                                         FontSize="16"
@@ -179,7 +203,18 @@
                     </Button>
                 </DockPanel>
 
-                <ListBox ItemsSource="{Binding MemoDtos}" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                <ListBox
+                    x:Name="memoList"
+                    ItemsSource="{Binding MemoDtos}"
+                    ScrollViewer.VerticalScrollBarVisibility="Hidden">
+
+                    <!--  双击命令  -->
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDoubleClick">
+                            <i:InvokeCommandAction Command="{Binding EditMemoCommand}" CommandParameter="{Binding ElementName=memoList, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel MaxHeight="80">
