--- a/MyToDo/Views/IndexView.xaml
+++ b/MyToDo/Views/IndexView.xaml
@@ -27,7 +27,7 @@
         <TextBlock
             Margin="15,10"
             FontSize="22"
-            Text="你好，樊桦! 今天是2024-03-20 星期三" />
+            Text="{Binding Title}" />
 
         <ItemsControl Grid.Row="1" ItemsSource="{Binding TaskBars}">
             <ItemsControl.ItemsPanel>
@@ -42,6 +42,12 @@
                         Margin="10"
                         Background="{Binding Color}"
                         CornerRadius="5">
+                        <Border.InputBindings>
+                            <MouseBinding MouseAction="LeftClick"
+                                          Command="{Binding DataContext.NavigateCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                          CommandParameter="{Binding}"/>
+                        </Border.InputBindings>
+                        
                         <Border.Style>
                             <Style TargetType="Border">
                                 <Style.Triggers>
