--- a/MyToDo/Views/MainView.xaml
+++ b/MyToDo/Views/MainView.xaml
@@ -24,11 +24,11 @@
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
-    <!--好像是要有这一层才能有弹窗-->
+    <!--  好像是要有这一层才能有弹窗  -->
     <materialDesign:DialogHost
-        DialogTheme="Inherit" x:Name="DialogHost"
-        Identifier="Root"
-        SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
+        x:Name="DialogHost"
+        DialogTheme="Inherit"
+        Identifier="Root">
 
         <materialDesign:DrawerHost x:Name="drawerHost" IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}">
             <materialDesign:DrawerHost.LeftDrawerContent>
@@ -76,8 +76,13 @@
 
                 </DockPanel>
             </materialDesign:DrawerHost.LeftDrawerContent>
-
-            <DockPanel>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <!--  全局通知的消息队列  -->
+                <materialDesign:Snackbar x:Name="Snackbar" Panel.ZIndex="1" MessageQueue="{materialDesign:MessageQueue}" />
                 <materialDesign:ColorZone
                     x:Name="ColorZone"
                     Padding="0"
@@ -151,8 +156,8 @@
                     </DockPanel>
                 </materialDesign:ColorZone>
 
-                <ContentControl prism:RegionManager.RegionName="{x:Static ext:PrismManager.MainViewRegionName}" />
-            </DockPanel>
+                <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static ext:PrismManager.MainViewRegionName}" />
+            </Grid>
         </materialDesign:DrawerHost>
     </materialDesign:DialogHost>
 </Window>
